--- a/4-recurrent_neural_networks/tutorial_4_RNNs-solutions.ipynb
+++ b/4-recurrent_neural_networks/tutorial_4_RNNs-solutions.ipynb
@@ -205,7 +205,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -215,12 +215,13 @@
       },
       "outputs": [
         {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "Warning: Gym version v0.24.1 has a number of critical issues with `gym.make` such that environment observation and action spaces are incorrectly evaluated, raising incorrect errors and warning . It is recommend to downgrading to v0.23.1 or upgrading to v0.25.1\n",
-            "/usr/local/lib/python3.10/dist-packages/gym/envs/registration.py:396: UserWarning: \u001b[33mWARN: The `registry.all` method is deprecated. Please use `registry.values` instead.\u001b[0m\n",
-            "  logger.warn(\n"
+          "ename": "",
+          "evalue": "",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31mRunning cells with '.venv' requires the ipykernel package.\n",
+            "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+            "\u001b[1;31mCommand: '/home/manuel/BAMB2023/4-recurrent_neural_networks/.venv/bin/python -m pip install ipykernel -U --force-reinstall'"
           ]
         }
       ],
@@ -493,19 +494,20 @@
         "perf = np.array(perf)\n",
         "reward = np.array(reward)   \n",
         "# Plot first 40 steps\n",
+        "num_steps = 40\n",
         "f, ax = plt.subplots(ncols=1, nrows=3, figsize=(8, 4), dpi=150, sharex=True)\n",
         "\n",
-        "ax[0].plot(np.arange(1, num_steps+1)*env_kwargs['dt'], inputs[:40, 0], label='Fixation')\n",
-        "ax[0].plot(np.arange(1, num_steps+1)*env_kwargs['dt'], inputs[:40, 1], label='Stim. L.')\n",
-        "ax[0].plot(np.arange(1, num_steps+1)*env_kwargs['dt'], inputs[:40, 2], label='Stim. R.')\n",
+        "ax[0].plot(np.arange(1, num_steps+1)*env_kwargs['dt'], inputs[:num_steps, 0], label='Fixation')\n",
+        "ax[0].plot(np.arange(1, num_steps+1)*env_kwargs['dt'], inputs[:num_steps, 1], label='Stim. L.')\n",
+        "ax[0].plot(np.arange(1, num_steps+1)*env_kwargs['dt'], inputs[:num_steps, 2], label='Stim. R.')\n",
         "ax[0].set_ylabel('Inputs')\n",
         "ax[0].legend()\n",
-        "ax[1].plot(np.arange(1, num_steps+1)*env_kwargs['dt'], gt[:40], label='Targets', color='k')\n",
-        "ax[1].plot(np.arange(1, num_steps+1)*env_kwargs['dt'], actions[:40], label='Choice', linestyle='--')\n",
+        "ax[1].plot(np.arange(1, num_steps+1)*env_kwargs['dt'], gt[:num_steps], label='Targets', color='k')\n",
+        "ax[1].plot(np.arange(1, num_steps+1)*env_kwargs['dt'], actions[:num_steps], label='Choice', linestyle='--')\n",
         "ax[1].set_ylabel('Actions / Targets')\n",
         "ax[1].legend()\n",
-        "ax[2].plot(np.arange(1, num_steps+1)*env_kwargs['dt'], perf[:40], label='Accuracy')\n",
-        "ax[2].plot(np.arange(1, num_steps+1)*env_kwargs['dt'], reward[:40], label='reward')\n",
+        "ax[2].plot(np.arange(1, num_steps+1)*env_kwargs['dt'], perf[:num_steps], label='Accuracy')\n",
+        "ax[2].plot(np.arange(1, num_steps+1)*env_kwargs['dt'], reward[:num_steps], label='reward')\n",
         "ax[2].set_ylabel('Performance')\n",
         "ax[2].set_xlabel('Time (ms)')"
       ]
