--- a/4-recurrent_neural_networks/tutorial_4_RNNs-solutions.ipynb
+++ b/4-recurrent_neural_networks/tutorial_4_RNNs-solutions.ipynb
@@ -366,7 +366,7 @@
         "                            'decision': 300},\n",
         "                'sigma': 2,\n",
         "                'dim_ring': 2}\n",
-        "    wrappers_kwargs = {'probs': [0.8, 0.2]}\n",
+        "    wrappers_kwargs = {'probs': [[0.8, 0.2], [0.2, 0.8]]}\n",
         "else:\n",
         "    env_kwargs = {'dt': training_kwargs['dt']}"
       ]
