modify block duration

--- a/4-recurrent_neural_networks/tutorial_4_RNNs-solutions.ipynb
+++ b/4-recurrent_neural_networks/tutorial_4_RNNs-solutions.ipynb
@@ -313,16 +313,13 @@
         "# check if GPU is available\n",
         "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
         "\n",
-        "# name of the task on the neurogym library\n",
-        "envid = 'PerceptualDecisionMaking-v0'\n",
         "# INSTRUCTION 19 (once you have finished the tutorial): Other tasks to try: 'DelayMatchSample-v0', 'GoNogo-v0', 'ContextDecisionMaking-v0'\n",
         "# Set up config:\n",
         "training_kwargs = {'dt': 100,\n",
         "                   'lr': 1e-2,\n",
         "                   'n_epochs': 2000,\n",
         "                   'batch_size': 16,\n",
-        "                   'seq_len': 100,\n",
-        "                   'envid': envid}"
+        "                   'seq_len': 100}"
       ]
     },
     {
@@ -358,6 +355,7 @@
       "outputs": [],
       "source": [
         "# Set up task parameters\n",
+        "envid = 'PerceptualDecisionMaking-v0' # name of the task on the neurogym library\n",
         "if envid == 'PerceptualDecisionMaking-v0':\n",
         "    env_kwargs = {'dt': training_kwargs['dt'],\n",
         "                'timing': {'fixation': 300,\n",
@@ -366,7 +364,7 @@
         "                            'decision': 300},\n",
         "                'sigma': 2,\n",
         "                'dim_ring': 2}\n",
-        "    wrappers_kwargs = {'probs': [[0.8, 0.2], [0.2, 0.8]]}\n",
+        "    wrappers_kwargs = {'probs': [[0.9, 0.1], [0.1, 0.9]], 'block_dur': 50}\n",
         "else:\n",
         "    env_kwargs = {'dt': training_kwargs['dt']}"
       ]
@@ -466,7 +464,7 @@
       "source": [
         "# INSTRUCTION 0. Play with the task (run it several times, try random and constant agents) to see how it works.\n",
         "mpl.rcParams['font.family'] = ['DejaVu Serif']\n",
-        "num_steps = 400\n",
+        "num_steps = 1000\n",
         "inputs = []\n",
         "actions = []\n",
         "gt = []\n",
