--- a/4-recurrent_neural_networks/tutorial_4_RNNs-solutions.ipynb
+++ b/4-recurrent_neural_networks/tutorial_4_RNNs-solutions.ipynb
@@ -555,7 +555,7 @@
         "        block.append(env.curr_block)\n",
         "    else:\n",
         "        perf.append(0)\n",
-        "ops.plot_trials_timesteps(inputs=inputs, actions=actions, gt=gt, perf=perf, reward=reward, correct_choice=correct_choice, block=block)"
+        "ops.plot_trials_timestep(inputs=inputs, actions=actions, gt=gt, perf=perf, reward=reward, correct_choice=correct_choice, block=block)"
       ]
     },
     {
@@ -737,7 +737,8 @@
         "net = Net(input_size=env.observation_space.shape[0],\n",
         "          hidden_size=net_kwargs['hidden_size'],\n",
         "          output_size=env.action_space.n)\n",
-        "\n",
+        "# Faster alternative: import ops.efficieNet as Net and do net = Net(input_size=env.observation_space.shape[0],...\n",
+        "# efficieNet is the same implementation as Net but using PyTorch's built-in RNN module\n",
         "# Move network to the device (CPU or GPU)\n",
         "net = net.to(device)"
       ]
@@ -1062,7 +1063,7 @@
         "\n",
         "activity = np.array(activity)\n",
         "obs = np.array(obs)\n",
-        "\n",
+        "ops.plot_trials_timestep(inputs=obs, actions=actions, gt=gt, perf=perf, env_kwargs=env_kwargs)   \n",
         "# print stats of the activity: max, min, mean, std\n",
         "print('Activity stats:')\n",
         "print('Max: ' + str(np.max(activity)) + \\\n",
