plotting behav of trained net

--- a/4-recurrent_neural_networks/tutorial_4_RNNs-solutions.ipynb
+++ b/4-recurrent_neural_networks/tutorial_4_RNNs-solutions.ipynb
@@ -555,7 +555,7 @@
         "        block.append(env.curr_block)\n",
         "    else:\n",
         "        perf.append(0)\n",
-        "ops.plot_trials_timestep(inputs=inputs, actions=actions, gt=gt, perf=perf, reward=reward, correct_choice=correct_choice, block=block)"
+        "ops.plot_trials_timestep(inputs=inputs, actions=actions, gt=gt, perf=perf, reward=reward, env_kwargs=env_kwargs, num_steps=20)"
       ]
     },
     {
@@ -1038,8 +1038,7 @@
         "        # INSTRUCTION 8: get the network's choice.\n",
         "        # Take into account the shape of action_pred. Remember that the network makes a prediction for each time step in the trial.\n",
         "        # Which is the prediction we really care about when evaluating the network's performance?\n",
-        "        choice = np.argmax(action_pred[:, 0, :])\n",
-        "\n",
+        "        choice = np.argmax(action_pred[:, 0, :], axis=1)\n",
         "        # INSTRUCTION 9: check if the choice is correct\n",
         "        # Again, which is the target we want when evaluating the network's performance?\n",
         "        correct = choice[-1] == env.gt[-1]\n",
@@ -1054,7 +1053,7 @@
         "\n",
         "        # Log the inputs (or observations) received by the network\n",
         "        obs.append(env.ob)\n",
-        "        actions.append(action_pred[:, 0, :])\n",
+        "        actions.append(choice)\n",
         "        gt.append(env.gt)\n",
         "        perf.append(choice == env.gt)\n",
         "\n",
@@ -1063,7 +1062,9 @@
         "\n",
         "activity = np.array(activity)\n",
         "obs = np.array(obs)\n",
-        "ops.plot_trials_timestep(inputs=obs, actions=actions, gt=gt, perf=perf, env_kwargs=env_kwargs)   \n",
+        "print(obs.shape)\n",
+        "print(actions[0])\n",
+        "ops.plot_trials_timestep(inputs=obs[0], actions=actions[0], gt=gt[0], perf=perf[0], env_kwargs=env_kwargs)   \n",
         "# print stats of the activity: max, min, mean, std\n",
         "print('Activity stats:')\n",
         "print('Max: ' + str(np.max(activity)) + \\\n",
@@ -1178,52 +1179,37 @@
         "# plot the probability of choosing right as a function of the signed coherence and then fit a psychometric curve to the data.\n",
         "mpl.rcParams['font.family'] = ['DejaVu Serif']\n",
         "from scipy.optimize import curve_fit\n",
-        "from scipy.special import erf\n",
-        "def probit(x, beta, alpha):\n",
-        "    \"\"\"\n",
-        "    Return probit function with parameters alpha and beta.\n",
-        "\n",
-        "    Parameters\n",
-        "    ----------\n",
-        "    x : float\n",
-        "        independent variable.\n",
-        "    beta : float\n",
-        "        sensitiviy.\n",
-        "    alpha : TYPE\n",
-        "        bias term.\n",
-        "\n",
-        "    Returns\n",
-        "    -------\n",
-        "    probit : float\n",
-        "        probit value for the given x, beta and alpha.\n",
-        "\n",
-        "    \"\"\"\n",
-        "    probit = 1/2*(1+erf((beta*x+alpha)/np.sqrt(2)))\n",
-        "    return probit\n",
-        "\n",
-        "f, ax = plt.subplots(1, 1, figsize=(3, 3), dpi=150)\n",
-        "choice = info['choice'].values\n",
-        "# translate choice to 0 and 1\n",
-        "choice_01 = np.copy(choice)\n",
-        "choice_01 -= 1\n",
-        "gt = info['ground_truth'].values\n",
-        "coherence = info['coh'].values\n",
-        "# get signed coherence\n",
-        "signed_coherence = np.copy(coherence)\n",
-        "signed_coherence[gt == 0] = -signed_coherence[gt == 0]\n",
-        "# INSTRUCTION 10: plot the probability of choosing right as a function of the signed coherence\n",
-        "for sc in np.unique(signed_coherence):\n",
-        "    prob_right = np.mean(choice_01[signed_coherence == sc])\n",
-        "    std_right = np.std(choice_01[signed_coherence == sc])/np.sqrt(np.sum(signed_coherence == sc))\n",
-        "    ax.errorbar(sc, prob_right, yerr=std_right, color='k')\n",
-        "    ax.plot(sc, prob_right, 'o', color='k')\n",
-        "    ax.set_xlabel('Signed coherence')\n",
-        "    ax.set_ylabel('P(right)')\n",
-        "# fit psychometric curve\n",
-        "pars, _ = curve_fit(probit, signed_coherence, choice_01, p0=[0, 1])\n",
-        "x = np.linspace(-50, 50, 100)\n",
-        "ax.plot(x, probit(x, *pars), color='k')\n",
-        "plt.show()"
+        "block_colors = ['m', 'c']\n",
+        "def plot_psychometric_curve(info):\n",
+        "    f, ax = plt.subplots(1, 1, figsize=(3, 3), dpi=150)\n",
+        "    choice = info['choice'].values\n",
+        "    # translate choice to 0 and 1\n",
+        "    choice_01 = np.copy(choice)\n",
+        "    choice_01 -= 1\n",
+        "    gt = info['ground_truth'].values\n",
+        "    coherence = info['coh'].values\n",
+        "    # get signed coherence\n",
+        "    signed_coherence = np.copy(coherence)\n",
+        "    signed_coherence[gt == 0] = -signed_coherence[gt == 0]\n",
+        "    block = info['block'].values\n",
+        "    for i_blk, blk in enumerate(np.unique(block)):\n",
+        "        idx = block == blk\n",
+        "        # filter trials by block\n",
+        "        choice_01_block = choice_01[idx]\n",
+        "        signed_coherence_block = signed_coherence[idx]\n",
+        "        # INSTRUCTION 10: plot the probability of choosing right as a function of the signed coherence\n",
+        "        for sc in np.unique(signed_coherence_block):\n",
+        "            prob_right = np.mean(choice_01_block[signed_coherence_block == sc])\n",
+        "            std_right = np.std(choice_01_block[signed_coherence_block == sc])/np.sqrt(np.sum(signed_coherence_block == sc))\n",
+        "            ax.errorbar(sc, prob_right, yerr=std_right, color=block_colors[i_blk])\n",
+        "            ax.plot(sc, prob_right, 'o', color='k')\n",
+        "            ax.set_xlabel('Signed coherence')\n",
+        "            ax.set_ylabel('P(right)')\n",
+        "        # fit psychometric curve\n",
+        "        pars, _ = curve_fit(ops.probit, signed_coherence_block, choice_01_block, p0=[0, 1])\n",
+        "        x = np.linspace(-50, 50, 100)\n",
+        "        ax.plot(x, ops.probit(x, *pars), color=block_colors[i_blk])\n",
+        "        plt.show()"
       ]
     },
     {
