plot psychometrics for the two blocks

--- a/4-recurrent_neural_networks/tutorial_4_RNNs-solutions.ipynb
+++ b/4-recurrent_neural_networks/tutorial_4_RNNs-solutions.ipynb
@@ -1192,8 +1192,10 @@
         "    signed_coherence = np.copy(coherence)\n",
         "    signed_coherence[gt == 0] = -signed_coherence[gt == 0]\n",
         "    block = info['block'].values\n",
+        "\n",
         "    for i_blk, blk in enumerate(np.unique(block)):\n",
         "        idx = block == blk\n",
+        "        print(blk)\n",
         "        # filter trials by block\n",
         "        choice_01_block = choice_01[idx]\n",
         "        signed_coherence_block = signed_coherence[idx]\n",
@@ -1208,8 +1210,10 @@
         "        # fit psychometric curve\n",
         "        pars, _ = curve_fit(ops.probit, signed_coherence_block, choice_01_block, p0=[0, 1])\n",
         "        x = np.linspace(-50, 50, 100)\n",
-        "        ax.plot(x, ops.probit(x, *pars), color=block_colors[i_blk])\n",
-        "        plt.show()"
+        "        ax.plot(x, ops.probit(x, *pars), color=block_colors[i_blk], label='Block ' + str(blk) + ' slope: ' + str(np.round(pars[1], 2)))\n",
+        "    plt.legend()\n",
+        "    plt.show()\n",
+        "plot_psychometric_curve(info)"
       ]
     },
     {
