pass reward and action from previous trial

--- a/4-recurrent_neural_networks/tutorial_4_RNNs_bis-solutions.ipynb
+++ b/4-recurrent_neural_networks/tutorial_4_RNNs_bis-solutions.ipynb
@@ -383,15 +383,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "sGefh3mQNqjl"
-      },
-      "source": [
-        "We now zoom out and plot the ground truth and the blocks, to see how the task is structured."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "DkzsKoLkgUqR"
       },
       "source": [
@@ -408,7 +399,6 @@
       "source": [
         "# Set up config:\n",
         "num_neurons = 64\n",
-        "\n",
         "net_kwargs = {'hidden_size': num_neurons,\n",
         "              'action_size': env.action_space.n,\n",
         "              'input_size': env.observation_space.shape[0]} # size of the input to the network\n",
@@ -510,8 +500,9 @@
         "        ob = np.concatenate([ob, [rew], [action]])\n",
         "        # read out the inputs in that trial\n",
         "        inputs = torch.from_numpy(ob[:, np.newaxis, :]).type(torch.float)\n",
-        "        action_pred, _ = net(inputs)\n",
+        "        action_pred, hidden = net(inputs, hidden=hidden)\n",
         "        action_pred = action_pred.numpy()\n",
+        "\n",
         "        action = np.argmax(action_pred[:, 0, :], axis=1)\n",
         "        # You can also try to set the action to one constant value, e.g. action = 1\n",
         "        ob, rew, _, info = env.step(action)\n",
@@ -572,15 +563,22 @@
         "print('Training task ', envid)\n",
         "\n",
         "num_epochs = training_kwargs['n_epochs']\n",
-        "num_steps = training_kwargs['seq_len']\n",
+        "\n",
         "# We'll keep track of the loss as we train.\n",
         "# It is initialized to zero and then monitored over training interations\n",
         "running_loss = 0.0\n",
-        "\n",
+        "prev_reward = 0.0\n",
+        "prev_action = 0\n",
+        "hidden = None\n",
         "for i in range(num_epochs):\n",
         "\n",
         "    # get inputs and labels and pass them to the GPU\n",
-        "    actions, ground_truth = run_RL_sim(net, env, num_steps)\n",
+        "    env.new_trial()\n",
+        "    # read out the inputs in that trial\n",
+        "    inputs = env.ob\n",
+        "    # concatenate ob with reward and action\n",
+        "    inputs = np.concatenate([inputs, [[prev_reward], [prev_action]]], axis=1)\n",
+        "    labels = env.gt\n",
         "    inputs = torch.from_numpy(inputs).type(torch.float).to(device)\n",
         "    labels = torch.from_numpy(labels.flatten()).type(torch.long).to(device)\n",
         "    # print shapes of inputs and labels\n",
@@ -592,7 +590,7 @@
         "    optimizer.zero_grad()\n",
         "\n",
         "    # INSTRUCTION 3: FORWARD PASS: get the output of the network for a given input\n",
-        "    outputs, _ = net(inputs)\n",
+        "    outputs, hidden = net(inputs, hidden)\n",
         "\n",
         "    #reshape outputs so they have the same shape as labels\n",
         "    outputs = outputs.view(-1, env.action_space.n)\n",
@@ -684,7 +682,7 @@
       "source": [
         "# Since we will not train the network anymore, we can turn off the gradient computation. The most commun way to do this is to use the context manager torch.no_grad() as follows:\n",
         "with torch.no_grad():\n",
-        "    net = Net(input_size=config['net_kwargs']['input_size'],\n",
+        "    net = ops.RLNet(input_size=config['net_kwargs']['input_size'],\n",
         "              hidden_size=config['net_kwargs']['hidden_size'],\n",
         "              output_size=config['net_kwargs']['action_size'])\n",
         "\n",
