store previous reward and action

--- a/4-recurrent_neural_networks/tutorial_4_RNNs_bis-solutions.ipynb
+++ b/4-recurrent_neural_networks/tutorial_4_RNNs_bis-solutions.ipynb
@@ -576,16 +576,17 @@
         "    env.new_trial()\n",
         "    # read out the inputs in that trial\n",
         "    inputs = env.ob\n",
-        "    # concatenate ob with reward and action\n",
-        "    inputs = np.concatenate([inputs, [[prev_reward], [prev_action]]], axis=1)\n",
         "    labels = env.gt\n",
-        "    inputs = torch.from_numpy(inputs).type(torch.float).to(device)\n",
-        "    labels = torch.from_numpy(labels.flatten()).type(torch.long).to(device)\n",
         "    # print shapes of inputs and labels\n",
         "    if i == 0:\n",
         "        print('inputs shape: ', inputs.shape)\n",
         "        print('labels shape: ', labels.shape)\n",
         "        print('Max labels: ', labels.max())\n",
+        "\n",
+        "    # concatenate ob with reward and action\n",
+        "    inputs = np.concatenate([inputs, [[prev_reward], [prev_action]]], axis=1)\n",
+        "    inputs = torch.from_numpy(inputs).type(torch.float).to(device)\n",
+        "    labels = torch.from_numpy(labels.flatten()).type(torch.long).to(device)\n",
         "    # we need zero the parameter gradients to re-initialize and avoid they accumulate across epochs\n",
         "    optimizer.zero_grad()\n",
         "\n",
@@ -594,8 +595,6 @@
         "\n",
         "    #reshape outputs so they have the same shape as labels\n",
         "    outputs = outputs.view(-1, env.action_space.n)\n",
-        "\n",
-        "    #  INSTRUCTION 4: compute loss with respect to the labels\n",
         "    loss = criterion(outputs, labels)\n",
         "\n",
         "    # INSTRUCTION 5: compute gradients\n",
@@ -604,6 +603,17 @@
         "    # INSTRUCTION 6: update weights\n",
         "    optimizer.step()\n",
         "\n",
+        "    action_pred = outputs.numpy()\n",
+        "\n",
+        "    # INSTRUCTION 8: get the network's choice.\n",
+        "    # Take into account the shape of action_pred. Remember that the network makes a prediction for each time step in the trial.\n",
+        "    # Which is the prediction we really care about when evaluating the network's performance?\n",
+        "    choice = np.argmax(action_pred[-1, 0, :], axis=1)\n",
+        "    # INSTRUCTION 9: check if the choice is correct\n",
+        "    # Again, which is the target we want when evaluating the network's performance?\n",
+        "    prev_action = choice[-1]\n",
+        "    prev_reward = 1*(prev_action == labels[-1])\n",
+        "    \n",
         "    # print average loss over last 200 training iterations and save the current network\n",
         "    running_loss += loss.item()\n",
         "    if i % 200 == 199:\n",
