fix issue with shapes

--- a/4-recurrent_neural_networks/tutorial_4_RNNs_bis-solutions.ipynb
+++ b/4-recurrent_neural_networks/tutorial_4_RNNs_bis-solutions.ipynb
@@ -582,9 +582,10 @@
         "        print('inputs shape: ', inputs.shape)\n",
         "        print('labels shape: ', labels.shape)\n",
         "        print('Max labels: ', labels.max())\n",
-        "\n",
-        "    # concatenate ob with reward and action\n",
-        "    inputs = np.concatenate([inputs, [[prev_reward], [prev_action]]], axis=1)\n",
+        "    prev_reward = np.array([prev_reward]*inputs.shape[0])[:, np.newaxis]\n",
+        "    prev_action = np.array([prev_action]*inputs.shape[0])[:, np.newaxis]\n",
+        "    # concatenate ob with prev reward and prev action\n",
+        "    inputs = np.concatenate([inputs, prev_reward, prev_action], axis=1)\n",
         "    inputs = torch.from_numpy(inputs).type(torch.float).to(device)\n",
         "    labels = torch.from_numpy(labels.flatten()).type(torch.long).to(device)\n",
         "    # we need zero the parameter gradients to re-initialize and avoid they accumulate across epochs\n",
