fix issues with shapes and detaching the network

--- a/4-recurrent_neural_networks/tutorial_4_RNNs_bis-solutions.ipynb
+++ b/4-recurrent_neural_networks/tutorial_4_RNNs_bis-solutions.ipynb
@@ -562,10 +562,10 @@
       "source": [
         "print('Training task ', envid)\n",
         "\n",
-        "num_epochs = training_kwargs['n_epochs']\n",
+        "num_epochs = 100000 # training_kwargs['n_epochs']\n",
         "\n",
         "# We'll keep track of the loss as we train.\n",
-        "# It is initialized to zero and then monitored over training interations\n",
+        "# It is initialized to zero and then monitored over training iterations\n",
         "running_loss = 0.0\n",
         "prev_reward = 0.0\n",
         "prev_action = 0\n",
@@ -586,45 +586,50 @@
         "    prev_action = np.array([prev_action]*inputs.shape[0])[:, np.newaxis]\n",
         "    # concatenate ob with prev reward and prev action\n",
         "    inputs = np.concatenate([inputs, prev_reward, prev_action], axis=1)\n",
+        "    print(inputs)\n",
         "    inputs = torch.from_numpy(inputs).type(torch.float).to(device)\n",
         "    labels = torch.from_numpy(labels.flatten()).type(torch.long).to(device)\n",
         "    # we need zero the parameter gradients to re-initialize and avoid they accumulate across epochs\n",
         "    optimizer.zero_grad()\n",
-        "\n",
         "    # INSTRUCTION 3: FORWARD PASS: get the output of the network for a given input\n",
         "    outputs, hidden = net(inputs, hidden)\n",
-        "\n",
+        "    \n",
+        "    # Detach hidden state to avoid retaining the graph\n",
+        "    hidden = hidden.detach()\n",
+        "    \n",
+        "    # print(hidden.shape)\n",
+        "    hidden = hidden[-1, :][np.newaxis, :]\n",
+        "    # print(hidden.shape)\n",
         "    #reshape outputs so they have the same shape as labels\n",
         "    outputs = outputs.view(-1, env.action_space.n)\n",
         "    loss = criterion(outputs, labels)\n",
         "\n",
         "    # INSTRUCTION 5: compute gradients\n",
-        "    loss.backward()\n",
+        "    loss.backward(retain_graph=False)  # Ensure retain_graph is False\n",
         "\n",
         "    # INSTRUCTION 6: update weights\n",
         "    optimizer.step()\n",
         "\n",
-        "    action_pred = outputs.numpy()\n",
-        "\n",
+        "    action_pred = outputs.detach().numpy()\n",
         "    # INSTRUCTION 8: get the network's choice.\n",
         "    # Take into account the shape of action_pred. Remember that the network makes a prediction for each time step in the trial.\n",
         "    # Which is the prediction we really care about when evaluating the network's performance?\n",
-        "    choice = np.argmax(action_pred[-1, 0, :], axis=1)\n",
+        "    choice = np.argmax(action_pred[-1, :])\n",
         "    # INSTRUCTION 9: check if the choice is correct\n",
         "    # Again, which is the target we want when evaluating the network's performance?\n",
-        "    prev_action = choice[-1]\n",
-        "    prev_reward = 1*(prev_action == labels[-1])\n",
+        "    prev_action = choice\n",
+        "    prev_reward = 1*(prev_action == labels[-1].item())  # Ensure labels[-1] is a scalar\n",
         "    \n",
         "    # print average loss over last 200 training iterations and save the current network\n",
         "    running_loss += loss.item()\n",
-        "    if i % 200 == 199:\n",
+        "    if i % 2000 == 1999:\n",
         "        print('{:d} loss: {:0.5f}'.format(i + 1, running_loss / 200))\n",
         "        running_loss = 0.0\n",
         "\n",
         "        # save current state of network's parameters\n",
         "        torch.save(net.state_dict(), ops.get_modelpath(envid) / 'net.pth')\n",
         "\n",
-        "print('Finished Training')"
+        "print('Finished Training')\n"
       ]
     },
     {
