fix issue with wrappers

--- a/4-recurrent_neural_networks/tutorial_4_RNNs-solutions.ipynb
+++ b/4-recurrent_neural_networks/tutorial_4_RNNs-solutions.ipynb
@@ -417,7 +417,7 @@
       ],
       "source": [
         "# call function to sample\n",
-        "dataset, env = data.get_dataset(envid=envid, env_kwargs=env_kwargs, wrappers_kwargs=wrappers_kwargs, training_kwargs=training_kwargs)"
+        "dataset, env = data.get_dataset(envid=envid, env_kwargs=env_kwargs, training_kwargs=training_kwargs)"
       ]
     },
     {
